@@ -1,7 +1,6 @@
 #include "system.h"
 
 #include "rpmbuild.h"
-#include "rpmmacro.h"	/* XXX for rpmGetPath */
 
 #include "popt/popt.h"
 
