@@ -1,6 +1,7 @@
 #include "system.h"
 
 #include "rpmlib.h"
+#include "rpmmacro.h"	/* XXX for rpmGetPath */
 
 #include "misc.h"
 
